--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,12 +25,18 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('index') }}">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-              </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
               </li> -->
+              {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+              </li>
+              {% endif %}
             </ul>
           </div>
         </div>
